Cleanup: Removed practice files and kept only core project files

--- a/credit-risk-prediction.ipynb
+++ b/credit-risk-prediction.ipynb
@@ -5130,48 +5130,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "6ab66a65-37a4-42db-a8f2-c5305c5b0e18",
+   "execution_count": 80,
+   "id": "d0821c4b-cb0a-458b-a4d9-3a7352cdb49b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized empty Git repository in C:/Users/chand/Chandu_Data_Science/AIE/.git/\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Initialize git in your project folder\n",
+    "!git init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2b79fb6b-302c-4ce8-8f5c-81c05b6cac46",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into 'credit-risk-prediction'...\n"
+      "warning: in the working copy of '.ipynb_checkpoints/DTC-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Feature_Engineering-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Feature_Engineering_Learn-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Feature_Engineering_practice-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/MatplotlibSeaborn-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Matplotlib_Seaborn-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Numpy_Notes-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Pandas_Notes-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Pandas_Practice-Titanic-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Python_Practice-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Python_notes-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/RFC-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/SVM-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Scikit_Learn-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Scikit_Learn_-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Scikit_Learn_KMeans-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled1-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled2-Copy1-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled2-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled3-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Untitled4-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/credit-risk-prediction-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/pipeline-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/python_-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'DTC.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Dataset_CDS/.ipynb_checkpoints/mtcars-checkpoint.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Dataset_CDS/.ipynb_checkpoints/synthetic_imbalanced_dataset-checkpoint.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Dataset_CDS/mtcars.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Dataset_CDS/synthetic_data.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Dataset_CDS/synthetic_imbalanced_dataset.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Feature_Engineering.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Feature_Engineering_Learn.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Feature_Engineering_practice.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'MatplotlibSeaborn.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Matplotlib_Seaborn.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Numpy_Notes.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Pandas_Notes.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Pandas_Practice-Titanic.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Python_Practice.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Python_notes.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'RFC.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'SVM.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Scikit_Learn.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Scikit_Learn_.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Scikit_Learn_KMeans.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Synthetic_Project (2) (2).ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled1.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled2-Copy1.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled2.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled3.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Untitled4.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'credit-risk-prediction.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: adding embedded git repository: credit-risk-prediction\n",
+      "hint: You've added another git repository inside your current repository.\n",
+      "hint: Clones of the outer repository will not contain the contents of\n",
+      "hint: the embedded repository and will not know how to obtain it.\n",
+      "hint: If you meant to add a submodule, use:\n",
+      "hint:\n",
+      "hint: \tgit submodule add <url> credit-risk-prediction\n",
+      "hint:\n",
+      "hint: If you added this path by mistake, you can remove it from the\n",
+      "hint: index with:\n",
+      "hint:\n",
+      "hint: \tgit rm --cached credit-risk-prediction\n",
+      "hint:\n",
+      "hint: See \"git help submodule\" for more information.\n",
+      "hint: Disable this message with \"git config set advice.addEmbeddedRepo false\"\n",
+      "warning: in the working copy of 'pandas_practice.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'pipeline.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'projects/.ipynb_checkpoints/Synthetic_Project-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'projects/Synthetic_Project.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'python_.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
    "source": [
-    "!git clone https://github.com/Chandan-Reddy-41/credit-risk-prediction.git"
+    "# 2. Add all your project files\n",
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "be545c8b-5cd6-4444-bc73-0aa4f8e03ea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 9b7f6ee] Initial commit: Credit Risk Prediction Project\n",
+      " 87 files changed, 141503 insertions(+)\n",
+      " create mode 100644 .ipynb_checkpoints/DTC-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Feature_Engineering-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Feature_Engineering_Learn-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Feature_Engineering_practice-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/MatplotlibSeaborn-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Matplotlib_Seaborn-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Numpy_Notes-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Pandas_Notes-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Pandas_Practice-Titanic-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Python_Practice-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Python_notes-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/RFC-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/SVM-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Scikit_Learn-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Scikit_Learn_-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Scikit_Learn_KMeans-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Synthetic_Project (2) (2)-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled1-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled2-Copy1-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled2-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled3-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled4-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/credit-risk-prediction-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/numpy_practice-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/output-checkpoint.html\n",
+      " create mode 100644 .ipynb_checkpoints/pandas_practice-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/pipeline-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/python_-checkpoint.ipynb\n",
+      " create mode 100644 DTC.ipynb\n",
+      " create mode 100644 Dataset_CDS/.ipynb_checkpoints/Cities-checkpoint.csv\n",
+      " create mode 100644 Dataset_CDS/.ipynb_checkpoints/Titanic Dataset-checkpoint\n",
+      " create mode 100644 Dataset_CDS/.ipynb_checkpoints/mtcars-checkpoint.csv\n",
+      " create mode 100644 Dataset_CDS/.ipynb_checkpoints/sales_data-checkpoint.csv\n",
+      " create mode 100644 Dataset_CDS/.ipynb_checkpoints/synthetic_imbalanced_dataset-checkpoint.csv\n",
+      " create mode 100644 Dataset_CDS/Advertising.csv\n",
+      " create mode 100644 Dataset_CDS/Cities.csv\n",
+      " create mode 100644 Dataset_CDS/Git_csv_data\n",
+      " create mode 100644 Dataset_CDS/Global Superstore Sales dataset.xlsx\n",
+      " create mode 100644 Dataset_CDS/Mall_Customers.csv\n",
+      " create mode 100644 Dataset_CDS/Places.csv\n",
+      " create mode 100644 Dataset_CDS/Social_Network_Ads.csv\n",
+      " create mode 100644 Dataset_CDS/Titanic Dataset\n",
+      " create mode 100644 Dataset_CDS/Titanic_Dataset.xlsx\n",
+      " create mode 100644 Dataset_CDS/Walmart_Sales.csv\n",
+      " create mode 100644 Dataset_CDS/covid_toy.csv\n",
+      " create mode 100644 Dataset_CDS/diabetes1.csv\n",
+      " create mode 100644 Dataset_CDS/loan_approved.csv\n",
+      " create mode 100644 Dataset_CDS/mtcars.csv\n",
+      " create mode 100644 Dataset_CDS/sales_data.csv\n",
+      " create mode 100644 Dataset_CDS/synthetic_data.csv\n",
+      " create mode 100644 Dataset_CDS/synthetic_imbalanced_dataset.csv\n",
+      " create mode 100644 Dataset_CDS/train.csv\n",
+      " create mode 100644 Feature_Engineering.ipynb\n",
+      " create mode 100644 Feature_Engineering_Learn.ipynb\n",
+      " create mode 100644 Feature_Engineering_practice.ipynb\n",
+      " create mode 100644 MatplotlibSeaborn.ipynb\n",
+      " create mode 100644 Matplotlib_Seaborn.ipynb\n",
+      " create mode 100644 Model_reports/Model/kmeans_model.pkl\n",
+      " create mode 100644 Model_reports/Model_data_file/.ipynb_checkpoints/Mall_Customers_with_KMeansclusters-checkpoint.csv\n",
+      " create mode 100644 Model_reports/Model_data_file/Mall_Customers_with_KMeansclusters.csv\n",
+      " create mode 100644 Numpy_Notes.ipynb\n",
+      " create mode 100644 Pandas_Notes.ipynb\n",
+      " create mode 100644 Pandas_Practice-Titanic.ipynb\n",
+      " create mode 100644 Python_Practice.ipynb\n",
+      " create mode 100644 Python_notes.ipynb\n",
+      " create mode 100644 RFC.ipynb\n",
+      " create mode 100644 SVM.ipynb\n",
+      " create mode 100644 Scikit_Learn.ipynb\n",
+      " create mode 100644 Scikit_Learn_.ipynb\n",
+      " create mode 100644 Scikit_Learn_KMeans.ipynb\n",
+      " create mode 100644 Synthetic_Project (2) (2).ipynb\n",
+      " create mode 100644 Untitled.ipynb\n",
+      " create mode 100644 Untitled1.ipynb\n",
+      " create mode 100644 Untitled2-Copy1.ipynb\n",
+      " create mode 100644 Untitled2.ipynb\n",
+      " create mode 100644 Untitled3.ipynb\n",
+      " create mode 100644 Untitled4.ipynb\n",
+      " create mode 160000 credit-risk-prediction\n",
+      " create mode 100644 credit-risk-prediction.ipynb\n",
+      " create mode 100644 numpy_practice.ipynb\n",
+      " create mode 100644 output.html\n",
+      " create mode 100644 pandas_practice.ipynb\n",
+      " create mode 100644 pipeline.ipynb\n",
+      " create mode 100644 projects/.ipynb_checkpoints/Synthetic_Project-checkpoint.ipynb\n",
+      " create mode 100644 projects/Synthetic_Project.ipynb\n",
+      " create mode 100644 python_.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Create your first commit\n",
+    "!git commit -m \"Initial commit: Credit Risk Prediction Project\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "2a16be64-97e9-4ddb-a1ec-3f4f3a4a6cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Set the branch to 'main'\n",
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a07e1320-cb7d-41d0-90ca-56d5260e8921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Link your local folder to your NEW GitHub repository\n",
+    "# (Ensure this URL matches your GitHub username)\n",
+    "!git remote add origin https://github.com/Chandan-Reddy-41/credit-risk-prediction.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "a9044c4a-508b-479d-86cc-f65147234c18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/Chandan-Reddy-41/credit-risk-prediction.git\n",
+      " + 390e71c...9b7f6ee main -> main (forced update)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Push your files to GitHub\n",
+    "!git push -u origin main --force"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47d694e2-1c94-4c95-9862-14a45ab007a7",
+   "id": "72c68c76-e816-41e6-a781-d685a4c0f3c8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 1. Initialize git in your project folder\n",
-    "git init\n",
-    "\n",
-    "# 2. Add all your project files\n",
-    "git add .\n",
-    "\n",
-    "# 3. Create your first commit\n",
-    "git commit -m \"Initial commit: Credit Risk Prediction Project\"\n",
-    "\n",
-    "# 4. Set the branch to 'main'\n",
-    "git branch -M main\n",
-    "\n",
-    "# 5. Link your local folder to your NEW GitHub repository\n",
-    "# (Ensure this URL matches your GitHub username)\n",
-    "git remote add origin https://github.com/Chandan-Reddy-41/credit-risk-prediction.git\n",
-    "\n",
-    "# 6. Push your files to GitHub\n",
-    "git push -u origin main"
-   ]
+   "source": []
   }
  ],
  "metadata": {
