Final cleanup: Portfolio version

--- a/credit-risk-prediction.ipynb
+++ b/credit-risk-prediction.ipynb
@@ -5398,8 +5398,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "id": "8332bd1c-f63a-464c-8958-19013c27d6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'credit-risk-prediction.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Manually move any practice files (like Pandas_Notes.ipynb) OUT of this folder\n",
+    "# 2. Tell git to track the deletions\n",
+    "!git add -A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "27d0ed3a-4f8f-497f-8081-86ee26f5bcd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 7925fff] Cleanup: Removed practice files and kept only core project files\n",
+      " 1 file changed, 251 insertions(+), 20 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Commit the cleanup\n",
+    "!git commit -m \"Cleanup: Removed practice files and kept only core project files\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "16dc7c1a-7922-4c02-bbc0-def818af6301",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/Chandan-Reddy-41/credit-risk-prediction.git\n",
+      "   9b7f6ee..7925fff  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Push the clean version\n",
+    "!git push origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f806bd7f-5a0d-4db3-994c-910fc433b316",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm '.ipynb_checkpoints/DTC-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Feature_Engineering-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Feature_Engineering_Learn-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Feature_Engineering_practice-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/MatplotlibSeaborn-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Matplotlib_Seaborn-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Numpy_Notes-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Pandas_Notes-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Pandas_Practice-Titanic-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Python_Practice-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Python_notes-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/RFC-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/SVM-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Scikit_Learn-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Scikit_Learn_-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Scikit_Learn_KMeans-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Synthetic_Project (2) (2)-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled1-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled2-Copy1-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled2-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled3-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/Untitled4-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/credit-risk-prediction-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/numpy_practice-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/output-checkpoint.html'\n",
+      "rm '.ipynb_checkpoints/pandas_practice-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/pipeline-checkpoint.ipynb'\n",
+      "rm '.ipynb_checkpoints/python_-checkpoint.ipynb'\n",
+      "rm 'DTC.ipynb'\n",
+      "rm 'Dataset_CDS/.ipynb_checkpoints/Cities-checkpoint.csv'\n",
+      "rm 'Dataset_CDS/.ipynb_checkpoints/Titanic Dataset-checkpoint'\n",
+      "rm 'Dataset_CDS/.ipynb_checkpoints/mtcars-checkpoint.csv'\n",
+      "rm 'Dataset_CDS/.ipynb_checkpoints/sales_data-checkpoint.csv'\n",
+      "rm 'Dataset_CDS/.ipynb_checkpoints/synthetic_imbalanced_dataset-checkpoint.csv'\n",
+      "rm 'Dataset_CDS/Advertising.csv'\n",
+      "rm 'Dataset_CDS/Cities.csv'\n",
+      "rm 'Dataset_CDS/Git_csv_data'\n",
+      "rm 'Dataset_CDS/Global Superstore Sales dataset.xlsx'\n",
+      "rm 'Dataset_CDS/Mall_Customers.csv'\n",
+      "rm 'Dataset_CDS/Places.csv'\n",
+      "rm 'Dataset_CDS/Social_Network_Ads.csv'\n",
+      "rm 'Dataset_CDS/Titanic Dataset'\n",
+      "rm 'Dataset_CDS/Titanic_Dataset.xlsx'\n",
+      "rm 'Dataset_CDS/Walmart_Sales.csv'\n",
+      "rm 'Dataset_CDS/covid_toy.csv'\n",
+      "rm 'Dataset_CDS/diabetes1.csv'\n",
+      "rm 'Dataset_CDS/loan_approved.csv'\n",
+      "rm 'Dataset_CDS/mtcars.csv'\n",
+      "rm 'Dataset_CDS/sales_data.csv'\n",
+      "rm 'Dataset_CDS/synthetic_data.csv'\n",
+      "rm 'Dataset_CDS/synthetic_imbalanced_dataset.csv'\n",
+      "rm 'Dataset_CDS/train.csv'\n",
+      "rm 'Feature_Engineering.ipynb'\n",
+      "rm 'Feature_Engineering_Learn.ipynb'\n",
+      "rm 'Feature_Engineering_practice.ipynb'\n",
+      "rm 'MatplotlibSeaborn.ipynb'\n",
+      "rm 'Matplotlib_Seaborn.ipynb'\n",
+      "rm 'Model_reports/Model/kmeans_model.pkl'\n",
+      "rm 'Model_reports/Model_data_file/.ipynb_checkpoints/Mall_Customers_with_KMeansclusters-checkpoint.csv'\n",
+      "rm 'Model_reports/Model_data_file/Mall_Customers_with_KMeansclusters.csv'\n",
+      "rm 'Numpy_Notes.ipynb'\n",
+      "rm 'Pandas_Notes.ipynb'\n",
+      "rm 'Pandas_Practice-Titanic.ipynb'\n",
+      "rm 'Python_Practice.ipynb'\n",
+      "rm 'Python_notes.ipynb'\n",
+      "rm 'RFC.ipynb'\n",
+      "rm 'SVM.ipynb'\n",
+      "rm 'Scikit_Learn.ipynb'\n",
+      "rm 'Scikit_Learn_.ipynb'\n",
+      "rm 'Scikit_Learn_KMeans.ipynb'\n",
+      "rm 'Synthetic_Project (2) (2).ipynb'\n",
+      "rm 'Untitled.ipynb'\n",
+      "rm 'Untitled1.ipynb'\n",
+      "rm 'Untitled2-Copy1.ipynb'\n",
+      "rm 'Untitled2.ipynb'\n",
+      "rm 'Untitled3.ipynb'\n",
+      "rm 'Untitled4.ipynb'\n",
+      "rm 'credit-risk-prediction'\n",
+      "rm 'credit-risk-prediction.ipynb'\n",
+      "rm 'numpy_practice.ipynb'\n",
+      "rm 'output.html'\n",
+      "rm 'pandas_practice.ipynb'\n",
+      "rm 'pipeline.ipynb'\n",
+      "rm 'projects/.ipynb_checkpoints/Synthetic_Project-checkpoint.ipynb'\n",
+      "rm 'projects/Synthetic_Project.ipynb'\n",
+      "rm 'python_.ipynb'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git rm -r --cached ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "72c68c76-e816-41e6-a781-d685a4c0f3c8",
+   "id": "77829997-111c-4e08-8830-0736344a9ead",
    "metadata": {},
    "outputs": [],
    "source": []
