Final cleanup: Kept only core project files and dataset

--- a/credit-risk-prediction.ipynb
+++ b/credit-risk-prediction.ipynb
@@ -5130,51 +5130,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "77829997-111c-4e08-8830-0736344a9ead",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updating 393400e..c58feed\n",
-      "Fast-forward\n",
-      " README.md | 28 ++++++++++++++++++++++++++++\n",
-      " 1 file changed, 28 insertions(+)\n",
-      " create mode 100644 README.md\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/Chandan-Reddy-41/credit-risk-prediction\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      "   393400e..c58feed  main       -> origin/main\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!git pull origin main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "9b17669f-0973-4398-a352-8afd49ae7018",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Everything up-to-date\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git push origin main"
+    "# 1. Add ONLY your main project file\n",
+    "!git add credit-risk-prediction.ipynb\n",
+    "\n",
+    "# 2. Add ONLY the relevant dataset folder\n",
+    "!git add Dataset_CDS/synthetic_imbalanced_dataset.csv\n",
+    "\n",
+    "# 3. Create a .gitignore file \n",
+    "# This tells GitHub to PERMANENTLY ignore all those \"Untitled\" and \"checkpoint\" files\n",
+    "!echo .ipynb_checkpoints/ > .gitignore\n",
+    "!echo Untitled*.ipynb >> .gitignore\n",
+    "!echo *.html >> .gitignore\n",
+    "!echo *checkpoint.ipynb >> .gitignore\n",
+    "!git add .gitignore\n",
+    "\n",
+    "# 4. Commit this clean state\n",
+    "!git commit -m \"Final cleanup: Kept only core project files and dataset\"\n",
+    "\n",
+    "# 5. Push to GitHub (Force push to overwrite the messy history)\n",
+    "!git push origin main --force"
    ]
   },
   {
